Fix: Updated margin-bottom of the header. Reduce whitespace

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -95,7 +95,7 @@ without wrapping to the next line */
 
   .header{
     padding-bottom: 1%;
-    margin-bottom: 4%;
+    margin-bottom: 2%;
   }
 
   .header_inner_text{
